fixed small layout issue on iphone

--- a/sass/_claudio-custom.scss
+++ b/sass/_claudio-custom.scss
@@ -191,7 +191,7 @@
   .e-tags {
     overflow: hidden;
     float: left;
-    width: 40%;
+    width: 50%;
 
     p {
       margin: 0;
