--- a/site/static/styles/styles.css
+++ b/site/static/styles/styles.css
@@ -4999,7 +4999,7 @@ ul.b-sidebar {
 #case-study-page .e-tags {
   overflow: hidden;
   float: left;
-  width: 40%; }
+  width: 50%; }
   #case-study-page .e-tags p {
     margin: 0; }
   #case-study-page .e-tags .e-left {
